--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
-  "name": "template1",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2"
-  }
+    "name": "template1",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "next": "12.2.2",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-hook-form": "^7.33.1"
+    },
+    "devDependencies": {
+        "autoprefixer": "^10.4.7",
+        "daisyui": "^2.19.0",
+        "eslint": "8.19.0",
+        "eslint-config-next": "12.2.2",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.6"
+    }
 }
